// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates project 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="modal form"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-branch"
        >
          branch
        </label>
        <input
          id="create-project-branch"
          maxLength={200}
          name="branch"
          onChange={[Function]}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value=""
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="public"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 2`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="modal form"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-branch"
        >
          branch
        </label>
        <input
          id="create-project-branch"
          maxLength={200}
          name="branch"
          onChange={[Function]}
          type="text"
          value="branch"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <button
        disabled={false}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 3`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="modal form"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <form
    id="create-project-form"
    onSubmit={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-name"
        >
          name
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          autoFocus={true}
          id="create-project-name"
          maxLength={2000}
          name="name"
          onChange={[Function]}
          required={true}
          type="text"
          value="name"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-branch"
        >
          branch
        </label>
        <input
          id="create-project-branch"
          maxLength={200}
          name="branch"
          onChange={[Function]}
          type="text"
          value="branch"
        />
      </div>
      <div
        className="modal-field"
      >
        <label
          htmlFor="create-project-key"
        >
          key
          <em
            className="mandatory"
          >
            *
          </em>
        </label>
        <input
          id="create-project-key"
          maxLength={400}
          name="key"
          onChange={[Function]}
          required={true}
          type="text"
          value="key"
        />
      </div>
      <div
        className="modal-field"
      >
        <label>
          visibility
        </label>
        <VisibilitySelector
          className="little-spacer-top"
          onChange={[Function]}
          visibility="private"
        />
        <div
          className="spacer-top"
        >
          <UpgradeOrganizationBox
            organization="org"
          />
        </div>
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <i
        className="spinner spacer-right"
      />
      <button
        disabled={true}
        id="create-project-submit"
        type="submit"
      >
        create
      </button>
      <a
        href="#"
        id="create-project-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </footer>
  </form>
</Modal>
`;

exports[`creates project 4`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="modal form"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <div>
    <header
      className="modal-head"
    >
      <h2>
        qualifiers.create.TRK
      </h2>
    </header>
    <div
      className="modal-body"
    >
      <div
        className="alert alert-success"
      >
        Project 
        <Link
          onlyActiveOnIndex={false}
          style={Object {}}
          to={
            Object {
              "pathname": "/dashboard",
              "query": Object {
                "branch": undefined,
                "id": "name",
              },
            }
          }
        >
          name
        </Link>
         
        has been successfully created.
      </div>
    </div>
    <footer
      className="modal-foot"
    >
      <a
        href="#"
        id="create-project-close"
        onClick={[Function]}
      >
        close
      </a>
    </footer>
  </div>
</Modal>
`;
